--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "test": "jest",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
@@ -25,6 +26,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@jest/globals": "^29.4.1",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
